--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Project Study</title>
 </head>
 <body>
-  <h1>Laura has been here, wanna go for a beer?</h1>  
+  <h1>Laura has been here, wanna go for a beer?</h1>
+  <h69>get a haircut, your hair are getting over your head... gf told me and I wanna die</h69>  
 </body>
 </html>
