--- a/index.service.html
+++ b/index.service.html
@@ -30,9 +30,6 @@
 
     <div class="img-grid">
         <img src="assets/images/front-image.png" alt=front-picture>
-
-
-
         <div class="headline">
             <h1>AGENCY SERVICE</h1>
         </div>
@@ -46,7 +43,13 @@
         <div class="contact-button">
             <a href="#"><button class="buttonStyle1">Contac Us</button></a>
         </div>
+
+        <div class="arrow bounce"></div>
+
+
+
     </div>
+
 
 
 
