--- a/index.service.html
+++ b/index.service.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <link href="assets/CSS/style.css" rel=" stylesheet">
     <script src="assets/Java/Java.js" defer></script>
     <title>ESS</title>
@@ -45,10 +45,65 @@
         </div>
 
         <div class="arrow bounce"></div>
-
-
-
     </div>
+
+    <!-- grid for service -->
+    <div class="services-grid">
+
+        <ul class="box">
+
+            <li><i class="arrow-icon fas fa-chevron-right"></i>About the company</li>
+            <hr>
+            <li><i class="arrow-icon fas fa-chevron-right"></i> Guidance and Counselling</i></li>
+            <hr>
+            <li><i class="arrow-icon fas fa-chevron-right"></i>Service Price</li>
+            <hr>
+            <li><i class=" arrow-icon fas fa-chevron-right"></i>Filling out the Application</li>
+            <hr>
+            <li><i class=" arrow-icon fas fa-chevron-right"></i>Visa Application</li>
+            <hr>
+            <li><i class=" arrow-icon fas fa-chevron-right"></i>Communication with university</li>
+            <hr>
+            <li><i class=" arrow-icon fas fa-chevron-right"></i>Personal Meetings</li>
+            <hr>
+            <li><i class=" arrow-icon fas fa-chevron-right"></i>Search for Accomodation</li>
+            <hr>
+        </ul>
+
+        <div class="service-img">
+            <img src="/assets/images/visa1.png" width="490px">
+        </div>
+
+        <div class="services-text-grid">
+            <div class="box-header">
+                <h1> Visa Application</h1>
+            </div>
+            <div class="box-paragraph">
+                <p> Before you can leave the country, you’re going to need to make sure you have an International
+                    Student Visa. <br>Don’t worry, this is something ESS can arrange on your behalf from start to
+                    finish.
+                </p>
+
+                <p>So your application has been approved, you’ve got your offer and you’re ready to go overseas. But
+                    wait! <br>Before you can leave the country, you’re going to need to make sure you have an
+                    International
+                    Student Visa.</p>
+
+                <p>Don’t worry, this is something ESS can arrange on your behalf from start to finish. Not only do we
+                    provide <br>up-to-date advice regarding the visa requirements of your destination country but we can
+                    process the visas in-house.</p>
+
+                <p> This means you don’t need to go outside ESS to complete this part of the process. And because we
+                    know the details<br> of your application already, we can help get you quicker outcomes.</p>
+
+                <img src="assets/images/passport.png" id="picture-1">
+                <img src="assets/images/visa.png" id="picture-2">
+            </div>
+
+
+
+
+        </div>
 
 
 
