--- a/service.html
+++ b/service.html
@@ -71,7 +71,7 @@
         </ul>
 
         <div class="service-img">
-            <img src="/assets/images/visa1.png" width="490px">
+            <img src="assets/images/visa1.png" width="490px">
         </div>
 
         <div class="services-text-grid">
