--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <link href="assets/CSS/style.css" rel=" stylesheet">
-    <script src="assets/Java/Java.js" defer></script>
+    <script src="assets/js/Javascript.js" defer></script>
     <title>ESS</title>
 </head>
 
