--- a/Contact-us.html
+++ b/Contact-us.html
@@ -41,7 +41,7 @@
         </section>
 
         <div class="contact-intro-img">
-            <img src="footage/contact.png" alt=contact-picture>
+            <img src="assets/images/contact.png" alt=contact-picture>
         </div>
 
     <div class="arrow bounce"></div>
@@ -49,14 +49,14 @@
 </div>
 
  <div class="img-cont">
-        <img src="footage/ESS-BG.png" alt=front-picture>
+        <img src="assets/images/ESS-BG.png" alt=front-picture>
     </div> 
 
 
  <!-- .......................... Contact us page team .......................... -->
  <div class="grid-contact-info">
     <div class="contact-info-img">
-        <img src="footage/contact-card.png" alt=contact-picture>
+        <img src="assets/images/contact-card.png" alt=contact-picture>
         <p class="info-cont">
             <b>Email: </b> eustudysolution@gmail.com<br>
             <br>
@@ -69,7 +69,7 @@
 
     <div class="team"> <h3>Our Team</h3></div>
         <div class="person-1">
-            <img src="footage/person-1.png" alt=contact-picture>
+            <img src="assets/images/person-1.png" alt=contact-picture>
             <h4> Sumana Karki </h4>
             <p> “FROM Canada: I found ESS agency more experience, 
                 professional & dedicated. Their expertise are useful 
@@ -77,7 +77,7 @@
                  right institution based on my previous qualifications. ” </p>
         </div>
         <div class="person-2">
-            <img src="footage/person-1.png" alt=contact-picture>
+            <img src="assets/images/person-1.png" alt=contact-picture>
             <h4> Sumana Karki </h4>
             <p> “FROM Canada: I found ESS agency more experience, 
                 professional & dedicated. Their expertise are useful 
