--- a/index.html
+++ b/index.html
@@ -4,12 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- css folder/css-name -->
-    <link href="" rel=" stylesheet">
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
+    <link href="assets/CSS/style.css" rel=" stylesheet">
+    <script src="assets/js/Javascript.js" defer></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+      </style>
     <title>Project Study</title>
 </head>
 <body>
-  <h1>Laura has been here, wanna go for a beer?</h1>
-  <h69>get a haircut, your hair are getting over your head... gf told me and I wanna die</h69>  
+
+
+ <!--   navigation -->
+ <div class="topnav" id="myTopnav">
+  <img src="assets/images/Logo.png" width="50px" id="logo">
+  <!-- nav bar -->
+  <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+  <a href="service.html">Our Services</a>
+  <a href="#">Universities</a>
+
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+
+
+<div class="landing-img-grid">
+  <img src="assets/images/landing-img.png" alt=LandingImg>
+  <div class="landing-headline">
+      <h1>EUROPEAN STUDY SOLUTION</h1>
+  </div>
+  <div class="landing-headline-paragraph">
+      <p>Sometime the first step can be the hardest but at<br> ESS - your trusted education agent - we make it<br> easy. Chat to our education consultants today and<br> be one of the thousands of students a year we help<br> with studying abroad.</p>
+  </div>
+  <div class="landing-contact-button">
+      <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+  </div>
+
+  
+</div>
+<div class="landing-arrow bounce"></div>
 </body>
 </html>
