--- a/service.html
+++ b/service.html
@@ -15,7 +15,8 @@
 <body>
     <!--   navigation -->
     <div class="topnav" id="myTopnav">
-        <img src="assets/images/Logo.png" width="50px" id="logo">
+           <img src="assets/images/Logo.png" width="50px" id="logo">
+        
         <!-- nav bar -->
         <a href="#"><button class="buttonStyle1">Contac Us</button></a>
         <a href="#" class="active">Our Services</a>
@@ -32,7 +33,7 @@
         <img src="assets/images/front-image.png" alt=front-picture>
         <div class="headline">
             <h1>AGENCY SERVICE</h1>
-        </div>
+        </div>**
         <div class="headline-paragraph">
             <p>Our Service provide all needed step to be<br> accepted to the university. We will help you from <br>the
                 begging
