--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
  <div class="topnav" id="myTopnav">
   <img src="assets/images/Logo.png" width="50px" id="logo">
   <!-- nav bar -->
-  <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+  <a href="Contact-us.html"><button class="buttonStyle1">Contact Us</button></a>
   <a href="service.html">Our Services</a>
-  <a href="#">Universities</a>
+  <a href="universities.html">Universities</a>
 
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
@@ -148,7 +148,7 @@
     <div class="headline2">
       <h2>American Versus European Education Fee</h2>
     </div>
-      <img src="assets/images/landing/scale.png">
+      <img src="assets/images/landing/scales.png">
       <p>Sometime the first step can be the hardest but at 
         ESS - your trusted education agent - we make it 
         easy. Chat to our education consultants today and 
@@ -159,7 +159,7 @@
   
   <section class="universities">
     <div class="headline_uni">
-      <h2>Partner Universities</h2>
+      <h2>Sponsors Universities</h2>
     </div>
       <img src="assets/images/uni_logos/GEM.png">
       <img src="assets/images/uni_logos/ESC.png">
@@ -181,6 +181,8 @@
   <div class="headline2">
     <h2>Service Price You Can Choose</h2>
   </div>
+
+  <div></div>
 </section>
   
   
