--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
   </a>
 </div>
 
-
-
 <div class="landing-img-grid">
-  <img src="assets/images/landing/landing-img.png" alt=LandingImg>
+  <div class="scroll">
+    <img id="car" src="assets/images/landing/car.png">
+    <img id="plane" src="assets/images/landing/plane.png">
+  </div>
+  <img id="mainimg" src="assets/images/landing/landing-img.png" alt=LandingImg>
   <div class="landing-headline">
       <h1>EUROPEAN STUDY SOLUTION</h1>
   </div>
@@ -44,7 +46,7 @@
   </div>
 
 </div>
-  <div class="landing-arrow bounce"></div>
+<div class="landing-arrow bounce"></div>
 
   
 
@@ -95,35 +97,36 @@
   <div class="headline2">
     <h2>The Process We Will Go Through:</h2>
   </div>
+  <img id="airport" src="assets/images/landing/airport.png">
   <section class="steps">
-    <div>
-    <img src="assets/images/landing/1.png">
+  
+
+  <img src="assets/images/landing/1.png">
   <p>First of all, you will contact us and we will make 
     a call and appointment for further guideline</p>
-  </div>
-  <div><img src="assets/images/landing/2.png">
-<p>During a meeting, we will discuss your 
-    options and study programs you prefer</p></div>
-  <div><img src="assets/images/landing/3.png">
-<p>We will provide Personal Traits Test,
-    which will help to decided easier.</p></div>
-  <div><img src="assets/images/landing/4.png">
-<p>We will help you to find the best program 
-      and university according your needs</p></div>
-  <div> <img src="assets/images/landing/5.png">
- <p>Our service include filling in
-      all documentation for university</p></div>
-  <div><img src="assets/images/landing/6.png">
+  <img src="assets/images/landing/2.png">
+  <p>During a meeting, we will discuss your 
+    options and study programs you prefer</p>
+  <img src="assets/images/landing/3.png">
+  <p>We will provide Personal Traits Test,
+    which will help to decided easier.</p>
+  <img src="assets/images/landing/4.png">
+  <p>We will help you to find the best program 
+      and university according your needs</p>
+  <img src="assets/images/landing/5.png">
+  <p>Our service include filling in
+      all documentation for university</p>
+  <img src="assets/images/landing/6.png">
 
-    <p>Visa Application</p></div>
-  <div> <img src="assets/images/landing/7.png">
+  <p>Visa Application</p>
+  <img src="assets/images/landing/7.png">
 
-    <p>Will help you in finding the right 
-      accommodation</p></div>
-  <div><img src="assets/images/landing/8.png">
-      <p>We communicate with university so you
+  <p>Will help you in finding the right 
+      accommodation</p>
+  <img src="assets/images/landing/8.png">
+  <p>We communicate with university so you
       will get every news about your application</p>
-    </div>
+    
 
  
   </section>
@@ -178,6 +181,7 @@
   <div class="headline2">
     <h2>Service Price You Can Choose</h2>
   </div>
+  <img id="school" src="assets/images/landing/school.png">
   <img src="assets/images/landing/prices.png" alt="prices">
 </section>
 
@@ -221,28 +225,49 @@
     <h2>Frequently Asked Questions</h2>
   </div>
 
-  <div class="question">
-    <img src="assets/images/landing/+.png">
+  <div class="question" style="justify-self: end;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
     <p>What is included in the Price ?</p>
   </div>
 
-  <div class="question">
-    <img src="assets/images/landing/+.png">
-    <p>What is included in the Price ?</p>
+  <div class="question" style="justify-self: start;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p>How will the process go ? </p>
   </div>
 
-  <div class="question">
-    <img src="assets/images/landing/+.png">
-    <p>What is included in the Price ?</p>
+  <div class="question" style="justify-self: end;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p>What happens after I get accepted into the university ?</p>
   </div>
   
-  <div class="question">
-    <img src="assets/images/landing/+.png">
-    <p>What is included in the Price ?</p>
+  <div class="question" style="justify-self: start;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p>How do I get my visa ?</p>
+  </div>
+
+  <div class="question" style="justify-self: end;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p> How can I start?</p>
+  </div>
+
+  <div class="question" style="justify-self: start;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p>Can I get a scholarship?</p>
+  </div>
+  <div class="question" style="justify-self: end;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p>Are European Diplomas Globally recognized?</p>
+  </div>
+  <div class="question" style="justify-self: start;">
+    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <p>Will I be allowed to work there?</p>
   </div>
   
 
 </section>
 
+<section class="footer">
+  <p>Just placeholder :)</p>
+</section>
 </body>
 </html>
