contact us update + footer

--- a/Contact-us.html
+++ b/Contact-us.html
@@ -125,7 +125,7 @@
 		</div>
 	
 		<div class="contact">
-			
+			<h4> APPLY NOW </h4>
 			<form id="contact-form">
 				<p>
 					<label>Name</label>
@@ -155,9 +155,44 @@
        
     </div>
 
-    <div class="footer">
-        <p> Footer </p>
+ <footer>
+     <div class="footer-content">
+     <div class="footer-left">
+         <h4><b>Our Services</b></h4> 
+           <p> Admission Counselling
+           <br>Health Cover
+           <br>Student Visa Service
+           <br> Accomodation</p>
+           <br>
+         <div class="contact-btn"> <button> contact us </button> </div>
+     </div>
+
+     <div class="footer-center">
+        <h4><b> Contact Us </b></h4> 
+        <p><b>Telephone:</b>
+        <br>1 800 AFS-INFO
+        <br>
+        <br><b>Address:</b>
+        <br>120 Wall Street
+        <br>Floor 4
+        <br> New York, NY 10005</p>
     </div>
+
+    <div class="footer-right">
+        <h4><b>Study Abroad</b> </h4> 
+        <p>Why study abroad?
+        <br>Benefits of Overseas Study
+        <br>Steps to study abroad
+        <br>FAQs
+        <br>Ready to apply
+        <br>Student stories</p>
+    </div>
+    </div>
+    <div class="footer-bottom">
+        <p> Copyright © 2021 European Study Solution. </p>
+    </div>
+    </div>
+ </footer>
 
 
 
