--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="headline2">
     <h2>Why You Should Choose Us?</h2>
   </div>
-  <p>Sometime the first step can be the hardest but at ESS we make it easy. Chat to our education consultants today and be one of the thousands of students a year we help with studying abroad. <br><br>
+  <p class="chooseus_paragraph">Sometime the first step can be the hardest but at ESS we make it easy. Chat to our education consultants today and be one of the thousands of students a year we help with studying abroad. <br><br>
 
     ESS Agency understands that every individual is unique and our qualified team will ensure that you are provided with advice tailored to your needs, interests and circumstances. <br><br> 
     
@@ -66,31 +66,25 @@
 
 
     <div class="points">
-      <div class="first">
         <img src="assets/images/landing/chooseus1.png">
         <p>Saving around 30 000 $/year comparing <br>
           to going to American Universities </p>
-      </div>
-      <div class="second">
+
         <img src="assets/images/landing/chooseus2.png">
         <p>Organize everything from A to <br>
           Z at affordable cost  </p>
-      </div>
-      <div class="third">
+
         <img src="assets/images/landing/chooseus3.png">
         <p>Provide professional tests and find <br>
           ideal majors and universities.  </p>
-      </div>
-      <div class="fourth">
+
         <img src="assets/images/landing/chooseus4.png">
         <p>Our Partners we are collaborating - <br>
           Top World Universities  </p>
-      </div>
-      <div class="fifth">
+
         <img src="assets/images/landing/chooseus5.png">
         <p>Profound knowledge and experience <br>
           in the field  </p>
-      </div>
     </div>
 </section>
 
@@ -267,8 +261,46 @@
 
 </section>
 
-<section class="footer">
-  <p>Just placeholder :)</p>
-</section>
+<footer>
+  <div class="footer-content">
+  <div class="footer-left">
+      <h4><b>Our Services</b></h4> 
+        <p> Admission Counselling
+        <br>Health Cover
+        <br>Student Visa Service
+        <br> Accomodation</p>
+        <br>
+        <div class="landing-contact-button">
+          <a href="#"><button class="buttonStyle1">Contact Us</button></a>
+      </div>
+  </div>
+
+  <div class="footer-center">
+     <h4><b> Contact Us </b></h4> 
+     <p><b>Telephone:</b>
+     <br>1 800 AFS-INFO
+     <br>
+     <br><b>Address:</b>
+     <br>120 Wall Street
+     <br>Floor 4
+     <br> New York, NY 10005</p>
+ </div>
+
+ <div class="footer-right">
+     <h4><b>Study Abroad</b> </h4> 
+     <p>Why study abroad?
+     <br>Benefits of Overseas Study
+     <br>Steps to study abroad
+     <br>FAQs
+     <br>Ready to apply
+     <br>Student stories</p>
+ </div>
+ </div>
+ <div class="footer-bottom">
+     <p> Copyright © 2021 European Study Solution. </p>
+ </div>
+ </div>
+</footer>
+
 </body>
 </html>
