Program container Added

--- a/universities.html
+++ b/universities.html
@@ -67,23 +67,26 @@
                 <img src="assets/images/uni_logos/PSB.png">  
             </div>
 
-
         <div class="programcontainer">
 
             <div class="undergrad">
-
+                <h3>Undergraduate Programs</h3>
+                <i class="fas fa-chevron-down"></i>
             </div>
 
             <div class="postgrad">
-                
+                <h3>Postgraduate Programs</h3>
+                <i class="fas fa-chevron-down"></i>
             </div>
 
             <div class="doctor">
-
+                <h3>Doctoral Programs</h3>
+                <i class="fas fa-chevron-down"></i>
             </div>
 
             <div class="master">
-
+                <h3>MSc Programs</h3>
+                <i class="fas fa-chevron-down"></i>
             </div>
 
         </div>
@@ -144,6 +147,9 @@
             </div>
 
         </div>
+
+    </div>
+
 
         <!-- ----------------------- Footer -------------------------- -->
 
