--- a/service.html
+++ b/service.html
@@ -58,20 +58,28 @@
         <div class="tab">
             <button class="tablinks" onclick="openCity(event, 'About-Company')" id="defaultOpen">About the
                 Company</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Guidance ')">Guidance and Counselling</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Service Price')">Service Price</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Visa')">Visa Application</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Application')">Filling out the Application</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Communication')">Communication with university </button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Meetings')">Personal Meetings</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
             <button class="tablinks" onclick="openCity(event, 'Accomodation')">Search of Accommodation</button>
+            <i class="fas fa-chevron-right"></i>
             <hr>
         </div>
 
@@ -123,7 +131,7 @@
             <img src="assets/images/service-10.jpg" width="250px">
 
 
-            <h4>Do you have more questions related to Guidance?</h4>
+            <h5>Do you have more questions related to Guidance?</h5>
 
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
@@ -150,7 +158,7 @@
             <p>
 
                 <img src="assets/images/price.png" width="450px" id="price-img">
-            <h4>Do you have more questions related to Service Price?</h4>
+            <h5>Do you have more questions related to Service Price?</h5>
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
             </div>
@@ -177,7 +185,7 @@
                 details of your application already, we can help get you quicker outcomes.</p>
             <img src="assets/images/visa1.png" width="250px">
 
-            <h4>Do you have more questions related to Visa Application?</h4>
+            <h5>Do you have more questions related to Visa Application?</h5>
 
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
@@ -202,7 +210,7 @@
                 Simply click here for a step-by-step guide on How to Apply or click here to speak to a counsellor today.
             </p>
             <img src="assets/images/service-5.jpg" width="250px">
-            <h4>Do you have more questions related to Filling out Application?</h4>
+            <h5>Do you have more questions related to Filling out Application?</h5>
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
             </div>
@@ -229,7 +237,7 @@
                 in
                 the different university activities, sports teams. </p>
             <img src="assets/images/service-9.jpg" width="250px">
-            <h4>Do you have more questions related to Universities?</h4>
+            <h5>Do you have more questions related to Universities?</h5>
 
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
@@ -262,7 +270,7 @@
                 wealth
                 of information specially tailored for international students.</p>
             <img src="assets/images/service-6.jpg" width="250px">
-            <h4>Do you have more questions related to Individual Meetings?</h4>
+            <h5>Do you have more questions related to Individual Meetings?</h5>
 
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
@@ -293,7 +301,7 @@
                 4. On-campus housing in halls of residence or small apartments<br><br>
 
             </p>
-            <h4>Do you have more questions related to Accomodation?</h4>
+            <h5>Do you have more questions related to Accomodation?</h5>
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
             </div>
@@ -302,7 +310,45 @@
 
 
     <footer>
+        <div class="footer-content">
+            <div class="footer-left">
+                <h4><b>Our Services</b></h4>
+                <p> Admission Counselling
+                    <br>Health Cover
+                    <br>Student Visa Service
+                    <br> Accomodation
+                </p>
+                <br>
+                <div class="contact-btn"> <button> contact us </button> </div>
+            </div>
 
+            <div class="footer-center">
+                <h4><b> Contact Us </b></h4>
+                <p><b>Telephone:</b>
+                    <br>1 800 AFS-INFO
+                    <br>
+                    <br><b>Address:</b>
+                    <br>120 Wall Street
+                    <br>Floor 4
+                    <br> New York, NY 10005
+                </p>
+            </div>
+
+            <div class="footer-right">
+                <h4><b>Study Abroad</b> </h4>
+                <p>Why study abroad?
+                    <br>Benefits of Overseas Study
+                    <br>Steps to study abroad
+                    <br>FAQs
+                    <br>Ready to apply
+                    <br>Student stories
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p> Copyright © 2021 European Study Solution. </p>
+        </div>
+        </div>
     </footer>
 
 
