Fixes + JS implementation

--- a/universities.html
+++ b/universities.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">    
     <link href="assets/css/style-universities.css" rel="stylesheet">
+    <script src="assets/js/university.js" defer></script>
     <title>Universities</title>
 
 </head>
@@ -71,22 +72,22 @@
 
             <div class="undergrad">
                 <h3>Undergraduate Programs</h3>
-                <i class="fas fa-chevron-down"></i>
+                <button onclick="learnmore()" class="learnmorebtn"><i class="fas fa-chevron-down"></i></button>
             </div>
-
+              
             <div class="postgrad">
                 <h3>Postgraduate Programs</h3>
-                <i class="fas fa-chevron-down"></i>
+                <button onclick="learnmore()" class="learnmorebtn"><i class="fas fa-chevron-down"></i></button>
             </div>
 
             <div class="doctor">
                 <h3>Doctoral Programs</h3>
-                <i class="fas fa-chevron-down"></i>
+                <button onclick="learnmore()" class="learnmorebtn"><i class="fas fa-chevron-down"></i></button>
             </div>
 
             <div class="master">
                 <h3>MSc Programs</h3>
-                <i class="fas fa-chevron-down"></i>
+                <button onclick="learnmore()" class="learnmorebtn"><i class="fas fa-chevron-down"></i></button>
             </div>
 
         </div>
