--- a/index.html
+++ b/index.html
@@ -221,41 +221,49 @@
   </div>
 
   <div class="question" style="justify-self: end;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns1()" class="faq_button1" ><img src="assets/images/landing/+.png"></button>
     <p>What is included in the Price ?</p>
+    <p id="answer1">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
 
   <div class="question" style="justify-self: start;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns2()" class="faq_button2"><img src="assets/images/landing/+.png"></button>
     <p>How will the process go ? </p>
+    <p id="answer2">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
 
   <div class="question" style="justify-self: end;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns3()" class="faq_button3"><img src="assets/images/landing/+.png"></button>
     <p>What happens after I get accepted into the university ?</p>
+    <p id="answer3">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
   
   <div class="question" style="justify-self: start;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns4()" class="faq_button4"><img src="assets/images/landing/+.png"></button>
     <p>How do I get my visa ?</p>
+    <p id="answer4">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
 
   <div class="question" style="justify-self: end;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns5()" class="faq_button5"><img src="assets/images/landing/+.png"></button>
     <p> How can I start?</p>
+    <p id="answer5">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
 
   <div class="question" style="justify-self: start;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns6()" class="faq_button6"><img src="assets/images/landing/+.png"></button>
     <p>Can I get a scholarship?</p>
+    <p id="answer6">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
   <div class="question" style="justify-self: end;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns7()" class="faq_button7"><img src="assets/images/landing/+.png"></button>
     <p>Are European Diplomas Globally recognized?</p>
+    <p id="answer7">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
   <div class="question" style="justify-self: start;">
-    <button class="faq_button"><img src="assets/images/landing/+.png"></button>
+    <button onclick="showAns8()" class="faq_button8"><img src="assets/images/landing/+.png"></button>
     <p>Will I be allowed to work there?</p>
+    <p id="answer8">"You already scrolled through that section you heedless piece of human ****."</p>
   </div>
   
 
