responsive service page

--- a/service.html
+++ b/service.html
@@ -128,7 +128,7 @@
                 tailored for international students.
             </p>
 
-            <img src="assets/images/service-10.jpg" width="250px">
+            <!--    <img src="assets/images/service-10.jpg" id="price-img"> -->
 
 
             <h5>Do you have more questions related to Guidance?</h5>
@@ -157,7 +157,7 @@
                 details of your application already, we can help get you quicker outcomes.
             <p>
 
-                <img src="assets/images/price.png" width="450px" id="price-img">
+                <!--       <img src="assets/images/price.png" id="price-img"> -->
             <h5>Do you have more questions related to Service Price?</h5>
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
@@ -183,7 +183,7 @@
                 This means you don’t need to go outside ESS to complete this part of the process. And because we know
                 the
                 details of your application already, we can help get you quicker outcomes.</p>
-            <img src="assets/images/visa1.png" width="250px">
+            <!--  <img src="assets/images/visa1.png" id="price-img"> -->
 
             <h5>Do you have more questions related to Visa Application?</h5>
 
@@ -209,7 +209,7 @@
                 Studyco we make the process as streamlined as possible.
                 Simply click here for a step-by-step guide on How to Apply or click here to speak to a counsellor today.
             </p>
-            <img src="assets/images/service-5.jpg" width="250px">
+            <!--  <img src="assets/images/service-5.jpg" id="price-img"> -->
             <h5>Do you have more questions related to Filling out Application?</h5>
             <div class="contact-button">
                 <a href="#"><button class="buttonStyle1">Contac Us</button></a>
@@ -236,7 +236,7 @@
                 updated about different deadlines, updates, fees, with applications and new opportunities to be enrolled
                 in
                 the different university activities, sports teams. </p>
-            <img src="assets/images/service-9.jpg" width="250px">
+            <!--   <img src="assets/images/service-9.jpg" id="price-img"> -->
             <h5>Do you have more questions related to Universities?</h5>
 
             <div class="contact-button">
@@ -269,7 +269,7 @@
                 questions you have about life and study in Australia can be answered before you arrive. And we have a
                 wealth
                 of information specially tailored for international students.</p>
-            <img src="assets/images/service-6.jpg" width="250px">
+            <!--   <img src="assets/images/service-6.jpg" id="price-img"> -->
             <h5>Do you have more questions related to Individual Meetings?</h5>
 
             <div class="contact-button">
@@ -308,7 +308,7 @@
         </div>
     </div>
 
-
+    <!----------------------------------Footer -------------------------->
     <footer>
         <div class="footer-content">
             <div class="footer-left">
