--- a/universities.html
+++ b/universities.html
@@ -145,19 +145,17 @@
         <div class="programinfo">
 
             <div class="admissionvideo">
-                <iframe width="420" height="315"
-                    src="https://www.youtube.com/watch?v=-egxccTxFTk">
-                </iframe>
+                <iframe src="https://www.youtube.com/embed/-egxccTxFTk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-
+            
             <div class="admissiontext">
-                <h4>Apply to  Grenoble Ecole de Management</h4>
+                <h3>Apply to  Grenoble Ecole de Management</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
                 <button class="programbtn">Read about admission</button>
             </div>
 
             <div class="countrytext">
-                <h4>Get to know France</h4>
+                <h3>Get to know France</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
                 <button class="programbtn">Get to know France</button>
             </div>
@@ -171,7 +169,7 @@
             </div>
 
             <div class="maptext">
-                <h3>Address:</h3>
+                <h2>Address:</h2>
                 <p>120 Wall Street
                     Floor 4
                     New York, NY 10005
