--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet"> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5d734a0479.js" crossorigin="anonymous"></script>
     <link href="assets/CSS/style-index.css" rel=" stylesheet">
     <script src="assets/js/Javascript.js" defer></script>
@@ -19,7 +19,8 @@
  <!--   navigation -->
 <div class="topnav" id="myTopnav">
   <img src="assets/images/Logo.png" width="50px" id="logo">
-  <!-- nav bar -->
+
+
   <a href="Contact-us.html"><button class="buttonStyle1">Contact Us</button></a>
   <a href="service.html">Our Services</a>
   <a href="universities.html">Universities</a>
@@ -45,9 +46,11 @@
   <div class="landing-contact-button">
       <a href="#"><button class="buttonStyle1">Contact Us</button></a>
   </div>
-
+  <div class="landing-arrow bounce">
+    <i class="fas fa-chevron-down"></i>
+  </div>
 </div>
-<div class="landing-arrow bounce"></div>
+
 
   
 
