--- a/service.html
+++ b/service.html
@@ -48,6 +48,11 @@
             <div class="service-intro-img">
                 <img src="assets/images/front-page-figures.png" alt=service-picture>
             </div>
+
+            <div class="service-intro-img1">
+                <img src="assets/images/mobile-pic-service.png" alt=service-picture>
+            </div>
+
             <div class="arrow bounce"></div>
         </div>
     </div>
@@ -56,29 +61,33 @@
 
     <div class="service-tab">
         <div class="tab">
-            <button class="tablinks" onclick="openCity(event, 'About-Company')" id="defaultOpen">About the
+            <button class="tablinks" onclick="openCity(event, 'About-Company')" id="defaultOpen" id="left-div">About the
                 Company</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Guidance ')">Guidance and Counselling</button>
+            <button class="tablinks" id="left-div" onclick="openCity(event, 'Guidance ')">Guidance and
+                Counselling</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Service Price')">Service Price</button>
+            <button class="tablinks" id="left-div" onclick="openCity(event, 'Service Price')">Service Price</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Visa')">Visa Application</button>
+            <button class="tablinks" id="left-div" onclick="openCity(event, 'Visa')">Visa Application</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Application')">Filling out the Application</button>
+            <button class="tablinks" id="right-div" onclick="openCity(event, 'Application')">Filling out the
+                Application</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Communication')">Communication with university </button>
+            <button class="tablinks" id="right-div" onclick="openCity(event, 'Communication')">Communication with
+                university </button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Meetings')">Personal Meetings</button>
+            <button class="tablinks" id="right-div" onclick="openCity(event, 'Meetings')">Personal Meetings</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" onclick="openCity(event, 'Accomodation')">Search of Accommodation</button>
+            <button class="tablinks" id="right-div" onclick="openCity(event, 'Accomodation')">Search of
+                Accommodation</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
         </div>
