--- a/service.html
+++ b/service.html
@@ -90,6 +90,10 @@
                 Accommodation</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
+            <!--   <div class="aside-pic">
+                <img src="assets/images/students-service.jpg" width="100px">
+            </div> -->
+
         </div>
 
 
