--- a/universities.html
+++ b/universities.html
@@ -146,7 +146,7 @@
 
         </div>
 
-
+        <div class="programinfocontainer">
         <div class="programinfo">
 
             <div class="admissionvideo">
@@ -182,7 +182,7 @@
         
             </div>
         </div>
-
+        </div>
 
         <div class="studentlife">
             
