--- a/service.html
+++ b/service.html
@@ -119,9 +119,7 @@
                 Accommodation</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <!--   <div class="aside-pic">
-                <img src="assets/images/students-service.jpg" width="100px">
-            </div> -->
+
 
         </div>
 
@@ -137,7 +135,7 @@
                 focus would lay on helping to find professional orientation, accompaniment with all the documentary
                 work,
                 preparation for life abroad, etc.</p>
-            <img src="assets/images/service-6.jpg" id="price-img">
+            <img src="assets/images/service-5.jpg" id="price-img">
 
 
         </div>
@@ -172,13 +170,16 @@
 
             <!--    <img src="assets/images/service-10.jpg" id="price-img"> -->
 
-
             <h5>Do you have more questions related to Guidance?</h5>
 
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px; font-size: 18px;"></i>Contact
+                    Us</button></a></li>
             </div>
+
         </div>
+
 
         <div id="Service Price" class="tabcontent">
             <h3>Service Price</h3>
@@ -202,7 +203,8 @@
                 <!--       <img src="assets/images/price.png" id="price-img"> -->
             <h5>Do you have more questions related to Service Price?</h5>
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
             </div>
 
         </div>
@@ -230,7 +232,8 @@
             <h5>Do you have more questions related to Visa Application?</h5>
 
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
             </div>
         </div>
 
@@ -254,7 +257,8 @@
             <!--  <img src="assets/images/service-5.jpg" id="price-img"> -->
             <h5>Do you have more questions related to Filling out Application?</h5>
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
             </div>
         </div>
 
@@ -282,7 +286,8 @@
             <h5>Do you have more questions related to Universities?</h5>
 
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
             </div>
         </div>
 
@@ -315,7 +320,8 @@
             <h5>Do you have more questions related to Individual Meetings?</h5>
 
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
             </div>
         </div>
 
@@ -345,8 +351,13 @@
             </p>
             <h5>Do you have more questions related to Accomodation?</h5>
             <div class="contact-button">
-                <a href="#"><button class="buttonStyle1">Contac Us</button></a>
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
             </div>
+        </div>
+
+        <div class="main-picture">
+            <img src="assets/images/service-main-pic.png" id="main-picture">
         </div>
     </div>
 
