--- a/service.html
+++ b/service.html
@@ -135,7 +135,7 @@
                 focus would lay on helping to find professional orientation, accompaniment with all the documentary
                 work,
                 preparation for life abroad, etc.</p>
-            <img src="assets/images/service-5.jpg" id="price-img">
+            <img src="assets/images/Group 1.png" id="price-img">
 
 
 
