--- a/service.html
+++ b/service.html
@@ -169,7 +169,7 @@
                 tailored for international students.
             </p>
 
-            <!--    <img src="assets/images/service-10.jpg" id="price-img"> -->
+            <img src="assets/images/service-10.jpg" id="price-img">
 
             <h5>Do you have more questions related to Guidance?</h5>
 
