--- a/service.html
+++ b/service.html
@@ -135,7 +135,7 @@
                 focus would lay on helping to find professional orientation, accompaniment with all the documentary
                 work,
                 preparation for life abroad, etc.</p>
-            <img src="assets/images/france.png" id="price-img3">
+            <img src="assets/images/france-service.png" id="price-img3">
 
 
 
