--- a/universities.html
+++ b/universities.html
@@ -190,7 +190,7 @@
                 </div>
 
                 <div class="countryimage">
-                    <img src="assets/images/France.png">
+                    <img src="assets/images/france.png">
                 </div>
 
                 <div class="mapcontainer">
