--- a/service.html
+++ b/service.html
@@ -127,16 +127,33 @@
 
         <div id="About-Company" class="tabcontent">
             <h3>About the Company</h3>
-            <p>European Study Solution- ESS, is a newly start up organization registered in Ukraine,
-                whose purpose is to help American students with the application process and preparation for life abroad.
-                ESS would like to provide a payable service for Americans to help with application submission to
-                European
-                educational programs. Company’s main service feature is a unique approach to their client, where the
+            <p><strong>European Study Solution</strong>- ESS, is a newly start up organization registered in
+                Ukraine,<br>
+                whose purpose is to help American students with the application process and
+                preparation<br> for life
+                abroad.
+                ESS would like to provide a payable service for Americans to help with <br><strong>application
+                    submission to
+                    European
+                    educational programs</strong>. At the moment we are callobarting<br> with the five major France
+                Universities,
+                which Diploma are recognized worldwide.
+                <br><br>Our main service feature is a unique approach to their
+                client, where the
                 main
-                focus would lay on helping to find professional orientation, accompaniment with all the documentary
+                focus would <br>lay on helping to find professional orientation, accompaniment with all the
+                documentary
                 work,
-                preparation for life abroad, etc.</p>
+                preparation for life abroad, etc.
+            </p>
             <img src="assets/images/france-service.png" id="price-img3">
+            <h5>Do you have more questions about European Study Solution?</h5>
+
+            <div class="contact-button">
+                <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                        style="margin-top: 1px; margin-left:-3px; font-size: 18px;"></i>Contact
+                    Us</button></a></li>
+            </div>
 
 
 
