--- a/service.html
+++ b/service.html
@@ -17,7 +17,7 @@
 
 
     <nav class="navbar">
-        <div class="logo"> <img src="assets/images/Logo.png" id="logo"></div>
+        <div class="logo"><a href="index.html"><img src="assets/images/Logo.png" id="logo"></a></div>
 
         <a href="#" class="toggle-button">
             <span class="bar"></span>
