--- a/service.html
+++ b/service.html
@@ -17,7 +17,7 @@
 
 
     <nav class="navbar">
-        <div class="logo"><a href="index.html"><img src="assets/images/Logo.png" id="logo"></a></div>
+        <div class="logo"><a href="index.html"><img src="assets/images/Logo.png" id="logo"></div>
 
         <a href="#" class="toggle-button">
             <span class="bar"></span>
@@ -26,8 +26,8 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <li> <a href="universities.html">Universities</a></li>
-                <li> <a href="service.html">Our Services</a></li>
+                <li><a href="universities.html">Universities</a></li>
+                <li><a href="service.html">Our Services</a></li>
                 <li><a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"></i>Contact
                             Us</button></a></li>
 
@@ -95,7 +95,7 @@
             <i class="fas fa-chevron-right"></i>
 
             <hr>
-            <button class="tablinks" id="left-div" onclick="openCity(event, 'Guidance ')">Guidance and
+            <button class="tablinks active" id="left-div" onclick="openCity(event, 'Guidance ')">Guidance and
                 Counselling</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
